--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.0",
+    "@angular/animations": "^15.2.9",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
@@ -20,6 +20,8 @@
     "@angular/router": "^15.2.0",
     "@ionic/angular": "^7.2.1",
     "bootstrap": "^5.3.1",
+    "ngx-toast": "^1.1.4",
+    "ngx-toastr": "^16.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.1",
     "zone.js": "~0.12.0"
