--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ngx-toast": "^1.1.4",
     "ngx-toastr": "^16.2.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.27",
     "tslib": "^2.6.1",
     "zone.js": "~0.12.0"
   },
