--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.27",
     "tslib": "^2.6.1",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
